[gd_scene format=3 uid="uid://csxh6nynwu1a8"]

[ext_resource type="Script" uid="uid://c7j1xfsoqk5bp" path="res://game_end.gd" id="1_jasv6"]
[ext_resource type="Texture2D" uid="uid://bqbagvmhuhmdr" path="res://Assets/art/win.png" id="2_3qf0w"]
[ext_resource type="Texture2D" uid="uid://v686mfpv8mck" path="res://Assets/art/player_child_v3.png" id="2_wiu0u"]
[ext_resource type="Theme" uid="uid://b0ljbivp3477y" path="res://Themes/main_theme.tres" id="3_3qf0w"]
[ext_resource type="Texture2D" uid="uid://eqqisgs3rgsw" path="res://Assets/art/breakdownv1.png" id="5_83bs5"]

[node name="GameEnd" type="Node2D" unique_id=759705634]
script = ExtResource("1_jasv6")

[node name="EndWin" type="CanvasLayer" parent="." unique_id=815891951]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="EndWin" unique_id=952001683]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.8, 0.8, 0.8, 1)

[node name="Win" type="TextureRect" parent="EndWin" unique_id=1642594740]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_3qf0w")

[node name="TextureRect" type="TextureRect" parent="EndWin" unique_id=1549713460]
offset_left = 614.0
offset_top = 270.0
offset_right = 1174.0
offset_bottom = 995.0
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource("2_wiu0u")
stretch_mode = 4

[node name="RichTextLabel" type="RichTextLabel" parent="EndWin" unique_id=434537613]
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_3qf0w")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 100
text = "You Made it Home Safely"
horizontal_alignment = 1

[node name="EndTantrum" type="CanvasLayer" parent="." unique_id=1697428672]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="EndTantrum" unique_id=314026588]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.8, 0.8, 0.8, 1)

[node name="BreakdownRage" type="TextureRect" parent="EndTantrum" unique_id=556817004]
offset_left = 827.0
offset_top = 358.0
offset_right = 1283.0
offset_bottom = 1040.0
texture = ExtResource("5_83bs5")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="EndTantrum" unique_id=541947792]
offset_left = 614.0
offset_top = 270.0
offset_right = 1174.0
offset_bottom = 995.0
texture = ExtResource("2_wiu0u")
stretch_mode = 4

[node name="RichTextLabel" type="RichTextLabel" parent="EndTantrum" unique_id=285974823]
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_3qf0w")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 100
text = "Loss from Temper Tantrum! 
"
horizontal_alignment = 1

[node name="EndBreakdown" type="CanvasLayer" parent="." unique_id=557017143]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="EndBreakdown" unique_id=2052001911]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.8, 0.8, 0.8, 1)

[node name="BreakdownRage" type="TextureRect" parent="EndBreakdown" unique_id=1682256145]
offset_left = 515.0
offset_top = 185.0
offset_right = 971.0
offset_bottom = 1067.0
texture = ExtResource("5_83bs5")

[node name="TextureRect" type="TextureRect" parent="EndBreakdown" unique_id=631656363]
offset_left = 614.0
offset_top = 270.0
offset_right = 1174.0
offset_bottom = 995.0
texture = ExtResource("2_wiu0u")
stretch_mode = 4

[node name="RichTextLabel" type="RichTextLabel" parent="EndBreakdown" unique_id=1945569591]
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_3qf0w")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 100
text = "Loss from Mental Breakdown! 
"
horizontal_alignment = 1

[node name="EndWin2" type="CanvasLayer" parent="." unique_id=1564825288]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="EndWin2" unique_id=433584047]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.5027245, 0.327872, 0.104404114, 1)

[node name="BreakdownRage" type="TextureRect" parent="EndWin2" unique_id=1318128107]
offset_left = 515.0
offset_top = 185.0
offset_right = 971.0
offset_bottom = 1067.0
texture = ExtResource("5_83bs5")

[node name="TextureRect" type="TextureRect" parent="EndWin2" unique_id=2141204469]
offset_left = 614.0
offset_top = 270.0
offset_right = 1174.0
offset_bottom = 995.0
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource("2_wiu0u")
stretch_mode = 4

[node name="RichTextLabel" type="RichTextLabel" parent="EndWin2" unique_id=1810237086]
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("3_3qf0w")
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 77
text = "You realize THIS child isn't your child!"
horizontal_alignment = 1
